# hough

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  hough.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml  publish.yml  release-drafter.yml  release.yml
hough/: __init__.py  analyse.py  cli.py  cudautils.py  log_utils.py  main.py  multifiles.py  process.py  rotate.py  stats.py  utils.py
samples/: av-multi-batch.tif  dg-nova-multipage.tif  no-angles.csv  smask.csv
tests/: conftest.py  test_analysis.py  test_cli.py  test_histogram.py  test_hough.py  test_process.py  test_rotate.py
