# Big thanks to https://medium.com/georgian-impact-blog/python-tooling-makes-a-project-tick-181d567eea44

[tool.poetry]
name = "hough"
version = "0.2.7"
description = "Skew detection and correction in scanned images"
authors = ["qu1j0t3 <support@telegraphics.com.au>", "Joan Touzet <wohali@apache.org>"]
maintainers = ["Joan Touzet <wohali@apache.org>"]
repository = "https://github.com/wohali/hough"
keywords = ["hough", "scan", "rotate", "skew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]
license = "GPL-2.0-only"
readme = "README.md"
packages = [
    { include = "hough" },
    { include = "tests", format = "sdist" },
]

[project]
name = "hough"
requires-python = ">=3.10,<4.0"
dependencies = [
    "docopt-ng>=0.9.0",
    "imageio>=2.37.0",
    "numpy>=2.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.11.2",
    "termplotlib>=0.3.9",
    "pymupdf>=1.23.3",
    "filetype>=1.2.0",
    "tqdm>=4.66.1",
    "importlib_metadata>=6.8.0",
    "virtualenv (>=20.30.0,<21.0.0)",
]

[project.scripts]
hough = 'hough.cli:run'

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^7.4.4"
pre-commit = "^4.2.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
tox = "^4.12.1"
black = "^23.12.1"
pylint = ">=3.0.3,<4.0.0"
flakeheaven = "^3.3.0"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
disable_warnings = ["module-not-imported", "no-data-collected", "module-not-measured"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "except KeyboardInterrupt",
    "if __name__ == .__main__.:",
]

[tool.tox]
legacy_tox_ini = '''
[tox]
isolated_build = true
envlist = py39,py310,py311

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/ -v -x --cov=./ --cov-config=setup.cfg --cov-report=term --cov-report=html --cov-report=xml
'''

[tool.flakeheaven]
exclude = [".venv", "venv", ".git", "__pycache__", "doc/", "build/", "dist/", ".tox/"]
max_line_length = 120
show_source = true
accept_encodings = "utf-8"
format = "colored"
statistics = true

[tool.flakeheaven.plugins]
# come back and check out https://github.com/meltano/meltano/blob/main/pyproject.toml
pyflakes = [ "+*", "-E203", "-W503", ]
pycodestyle = [ "+*", "-E203", "-W503", ]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-x -v --capture=tee-sys --cov=hough --cov-report=html --cov-report=term --cov-report=xml --cov-config=.coveragerc"

# -- ISORT -- #

[tool.isort]
known_third_party = ["docopt", "filetype", "fitz", "imageio", "numpy", "pytest", "scipy", "skimage", "termplotlib", "tqdm"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
profile = "black"
